--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,53 @@
 alembic==1.7.7
+asttokens==2.0.5
+attrs==21.4.0
+backcall==0.2.0
+black==21.9b0
 click==8.1.2
+decorator==5.1.1
+environs==9.3.3
+executing==0.8.2
 Flask==2.1.1
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 importlib-metadata==4.11.3
+iniconfig==1.1.1
+ipython==8.0.1
 itsdangerous==2.1.2
+jedi==0.18.1
 Jinja2==3.1.1
 Mako==1.2.0
 MarkupSafe==2.1.1
+marshmallow==3.13.0
+matplotlib-inline==0.1.3
+mypy-extensions==0.4.3
+packaging==21.3
+parso==0.8.3
+pathspec==0.9.0
+pexpect==4.8.0
+pickleshare==0.7.5
+pip-autoremove==0.10.0
+platformdirs==2.3.0
+pluggy==1.0.0
+prompt-toolkit==3.0.28
 psycopg2-binary==2.9.3
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py==1.11.0
+Pygments==2.11.2
+pymongo==4.0.2
+pyparsing==3.0.6
+pytest==6.2.5
 python-dotenv==0.20.0
+regex==2021.8.28
+six==1.16.0
 SQLAlchemy==1.4.34
+stack-data==0.2.0
+toml==0.10.2
+tomli==1.2.1
+traitlets==5.1.1
+typing-extensions==3.10.0.2
+wcwidth==0.2.5
 Werkzeug==2.1.1
 zipp==3.8.0
